implements the remain helmholtz calculations